tests/unit/response_parsing/data/ec2-describe-security-groups.json
{
    "SecurityGroups": [
        {
            "IpPermissionsEgress": [],
            "Description": "quicklaunch-0",
            "IpPermissions": [
                {
                    "ToPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "UserIdGroupPairs": [],
                    "FromPort": 22
                }
            ],
            "GroupName": "quicklaunch-0",
            "OwnerId": "123456789012",
            "GroupId": "sg-68d8a958"
        },
        {
            "IpPermissionsEgress": [],
            "Description": "quicklaunch-1",
            "IpPermissions": [
                {
                    "ToPort": 3389,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "UserIdGroupPairs": [],
                    "FromPort": 3389
                }
            ],
            "GroupName": "quicklaunch-1",
            "OwnerId": "123456789012",
            "GroupId": "sg-72334242"
        },
        {
            "IpPermissionsEgress": [],
            "Description": "For iPython notebook.",
            "IpPermissions": [
                {
                    "ToPort": 22,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "UserIdGroupPairs": [],
                    "FromPort": 22
                },
                {
                    "ToPort": 443,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "UserIdGroupPairs": [],
                    "FromPort": 443
                },
                {
                    "ToPort": 8888,
                    "IpProtocol": "tcp",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "UserIdGroupPairs": [],
                    "FromPort": 8888
                }
            ],
            "GroupName": "notebook",
            "OwnerId": "123456789012",
            "GroupId": "sg-4e970e7e"
        },
        {
            "IpPermissionsEgress": [],
            "Description": "default group",
            "IpPermissions": [
                {
                    "ToPort": 65535,
                    "IpProtocol": "tcp",
                    "IpRanges": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "default",
                            "UserId": "123456789012",
                            "GroupId": "sg-eab831da"
                        }
                    ],
                    "FromPort": 0
                },
                {
                    "ToPort": 65535,
                    "IpProtocol": "udp",
                    "IpRanges": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "default",
                            "UserId": "123456789012",
                            "GroupId": "sg-eab831da"
                        }
                    ],
                    "FromPort": 0
                },
                {
                    "ToPort": -1,
                    "IpProtocol": "icmp",
                    "IpRanges": [],
                    "UserIdGroupPairs": [
                        {
                            "GroupName": "default",
                            "UserId": "123456789012",
                            "GroupId": "sg-eab831da"
                        }
                    ],
                    "FromPort": -1
                }
            ],
            "GroupName": "default",
            "OwnerId": "123456789012",
            "GroupId": "sg-eab831da"
        },
        {
            "VpcId": "vpc-8d2910e4",
            "Description": "default VPC security group",
            "IpPermissions": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [],
                    "UserIdGroupPairs": [
                        {
                            "UserId": "123456789012",
                            "GroupId": "sg-97b1aefb"
                        }
                    ]
                }
            ],
            "GroupName": "default",
            "IpPermissionsEgress": [
                {
                    "IpProtocol": "-1",
                    "IpRanges": [
                        {
                            "CidrIp": "0.0.0.0/0"
                        }
                    ],
                    "UserIdGroupPairs": []
                }
            ],
            "OwnerId": "123456789012",
            "GroupId": "sg-97b1aefb"
        }
    ],
    "ResponseMetadata": {
	"RequestId": "4296401f-8b78-4f99-b1fb-71def4fc3701"
    }
}
